# realms

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
cmake/: deps.cmake  (+4 more)
src/frontier/: CMakeLists.txt  Main.cpp
src/frontier/include/: loading_state.h  main_state.h
src/frontier/include/frontier/: components.h
src/frontier/include/frontier/components/: base.h  base.hpp
src/frontier/include/frontier/states/: game_state.hpp  loading_state.h  main_state.h  startup_state.hpp
src/frontier/include/frontier/systems/: quit_system.hpp
src/frontier/src/: component_serialization.h  loading_state.cpp  main.cpp  main_state.cpp
src/frontier/src/components/: serialization.h  serialization.hpp
src/frontier/src/states/: game_state.cpp  loading_state.cpp  main_state.cpp  startup_state.cpp
src/mods/core/: CMakeLists.txt
src/mods/core/src/: entry.cpp
src/mods/sample1/: CMakeLists.txt
src/mods/sample1/src/: entry.cpp
src/mods/sample2/: CMakeLists.txt
src/mods/sample2/src/: entry.cpp
src/motor/: CMakeLists.txt  Main.cpp  api_support.c  fs.c  host.c  log.c  main.c  main.cpp  myml.c  os_api.c  private_api.h  sds.c
src/motor/Core/: Application.cpp  Host.cpp  Logger.cpp  Shell.cpp  ShellLocal.cpp  ShellLocal.h
src/motor/Lib/: Logger.cpp  Myml.cpp
src/motor/host/: host.cpp
src/motor/include/motor/app/: app.hpp  app_builder.hpp  app_state.hpp  fwd.hpp  locator.hpp  state.hpp  transition.hpp
src/motor/include/motor/core/: algorithm.hpp  application.h  archive.h  archive.hpp  attribute.h  binary_archive.h  binary_archive.hpp  core_context.h  entity.h  event.hpp  events.hpp  exception.h  files_service.hpp  filesystem.hpp  fwd.hpp  game_state.h  input.hpp  ivec2_sery.hpp  ivec3_sery.hpp  json_archive.h  lua_archive.h  lua_archive.hpp  plugin_context.h  prefab_loader.h  progress.hpp  prototype_registry.h  rect.hpp  scripts.hpp  state_machine.h  storage.h  system.h  system_dispatcher.h  system_module.h  time.hpp  transition.h  type_traits.h  type_traits.hpp  utility.h  utility.hpp  uvec2_sery.hpp  (+3 more)
src/motor/include/motor/entity/: component_registry.hpp  components.hpp  executor.hpp  fwd.hpp  map.hpp  map_region.hpp  parent.hpp  prototype_registry.hpp  rect.hpp  scheduler.hpp  system_dispatcher.hpp  transform.hpp
src/motor/include/motor/graphics/: camera2d.hpp  fwd.hpp  image_atlas.hpp  image_region.hpp  rect_packer.hpp  screen.hpp  sprite.hpp  sprite_sheet.hpp  tile_chunk.hpp  tile_set.hpp
src/motor/include/motor/host/: application.h  core_context.h  events.h  game_state.h  mod.h  plugin.h  plugin_context.h  progress.h  state.h  storage.h
src/motor/include/motor/mods/: mod.hpp  mods_service.h  mods_service.hpp
src/motor/include/motor/platform/: dynamic_library.h  platform.h
src/motor/include/motor/resources/: image.hpp  image_atlas.hpp  image_loader.hpp  resources.hpp
src/motor/include/motor/services/: components_service.h  files_service.h  locator.h  mods_service.h  scripts_service.h
src/motor/plugins/: CMakeLists.txt  cr.h  plugin_host.c  plugins.cpp  plugins_unix.cpp  plugins_windows.cpp  private_plugin.h
src/motor/src/app/: app.cpp  app_builder.cpp  config_plugin.cpp  config_plugin.hpp  config_system.cpp  config_system.hpp  event_system.cpp  event_system.hpp  input_plugin.cpp  input_plugin.hpp  input_system.cpp  input_system.hpp  state.cpp  state_machine.cpp  state_machine.hpp  time_plugin.hpp  time_system.hpp  window_plugin.cpp  window_plugin.hpp  window_system.cpp  window_system.hpp
src/motor/src/core/: application.cpp  binary_archive.cpp  config_system.cpp  config_system.h  event_system.cpp  event_system.h  files_service.cpp  filesystem.cpp  game_state.cpp  internal_events.hpp  internal_filesystem.hpp  json_archive.cpp  lua_archive.cpp  prefab_loader.cpp  progress.hpp  prototype_registry.cpp  scripts.cpp  state_machine.cpp  state_machine.h  storage.cpp  system_dispatcher.cpp  window_system.cpp  window_system.h
src/motor/src/entity/: map_plugin.hpp  prototype_registry.cpp  scheduler.cpp  system_dispatcher.cpp
src/motor/src/graphics/: graphics_plugin.cpp  graphics_plugin.hpp  graphics_system.cpp  graphics_system.hpp  pipeline.cpp  pipeline.hpp  rect_packer.cpp  sprite_plugin.cpp  sprite_plugin.hpp  tile_plugin.cpp  tile_plugin.hpp
src/motor/src/gui/: gui_plugin.cpp  gui_plugin.hpp
src/motor/src/host/: application.cpp  config_system.cpp  config_system.h  event_system.cpp  event_system.h  game_state.cpp  mod.cpp  mods_system.cpp  mods_system.h  plugin_context.cpp  plugin_system.cpp  plugin_system.h  state.cpp  state_machine.cpp  state_machine.h  storage.cpp  test_dascript.cpp  window_system.cpp  window_system.h
src/motor/src/mods/: mods_plugin.cpp  mods_plugin.hpp  mods_service.cpp  mods_system.cpp  mods_system.h  mods_system.hpp
src/motor/src/platform/: backward.cpp  backward.hpp  dynamic_library.cpp  dynamic_library_windows.cpp  file_watcher.cpp  file_watcher.hpp  platform.cpp  platform.h  platform.hpp  platform_windows.cpp
src/motor/src/resources/: image.cpp  image_atlas.cpp
src/motor/src/services/: components_service.cpp  files_service.cpp  mods_service.cpp  scripts_service.cpp
src/motor/src/systems/: system_dispatcher.cpp
src/motor/sys/: crash_handler_linux.c  crash_handler_windows.c  file_windows.c  sys.h  sys_windows.c  sys_windows.h
src/realms/: CMakeLists.txt
src/realms/src/: events.hpp  game.hpp  main.cpp
src/realms/src/components/: base.hpp  base_sery.hpp  registration.cpp  registration.hpp
src/realms/src/plugins/: entry_plugin.cpp  entry_plugin.hpp  game_plugin.cpp  game_plugin.hpp
src/realms/src/systems/: hud.cpp  hud.hpp  movement.cpp  movement.hpp  registration.cpp  registration.hpp  transform.cpp  transform.hpp
src/sandbox/: CMakeLists.txt  archive.h  binary.h  json.h  main.cpp  main2.cpp  main3.cpp  plugin_context.cpp  plugin_context.h  prefab_loader.h  system_module.h
src/sandbox/src/: components.hpp  main.cpp
test/: CMakeLists.txt  test_myml.c
test/motor/: CMakeLists.txt
test/motor/Lib/: Myml.cpp
(+41 files in other folders)
